# building-blocks-editor

./: .gitattributes  .gitignore  Cargo.toml  README.md  config.ron
src/: bvt.rs  camera.rs  config.rs  cursor_ray.rs  cursor_tracker.rs  edit_tools.rs  geometry.rs  hover_hint.rs  immediate_mode.rs  lib.rs  map.rs  map_io.rs  mesh.rs  picking.rs  plugin.rs  renderer.rs  rendering.rs  selection_tool.rs  voxel.rs  voxel_renderer.rs
src/camera/: controller.rs  cursor_ray.rs  first_person.rs  orbit_controller.rs  orbit_transform.rs  third_person.rs  unreal_controller.rs
src/camera/first_person/: controller.rs
src/camera/third_person/: controller.rs  input.rs  plugin.rs  smoother.rs  transform.rs  vector.rs
src/edit_tools/: drag_face.rs  edit_timeline.rs  hover_hint.rs  plugin.rs  selection.rs  snapshotting_editor.rs  terraformer.rs  undo.rs
src/edit_tools/selection/: controller.rs  plugin.rs  view.rs
src/map_io/: chunk_compressor.rs  edit_buffer.rs  editor.rs  empty_chunk_remover.rs  plugin.rs
src/picking/: plugin.rs  ray_impact.rs  voxel_cursor.rs
src/renderer/: entity.rs  light.rs  mesh_generator.rs
src/renderer/render_graph/: lights_node.rs  mod.rs
src/renderer/render_graph/pbr_pipeline/: mod.rs
src/rendering/: array_material.rs  entity.rs  light.rs  render_graph.rs
src/rendering/render_graph/: forward_pipeline.rs  lights_node.rs
src/rendering/render_graph/forward_pipeline/: forward.frag  forward.vert
src/selection_tool/: plugin.rs
src/voxel/: chunk_processing.rs  geometry.rs  picking.rs  sdf_voxel.rs
src/voxel/chunk_processing/: bvt.rs  smooth_mesh.rs
src/voxel/picking/: clicked_voxel.rs  cursor_impact.rs  plugin.rs  ray_impact.rs  voxel_cursor.rs
src/voxel_renderer/: entity.rs  mesh_generator.rs
src/voxel_renderer/render_graph/: mod.rs
