[package]
name = "building-blocks-editor"
version = "0.1.0"
authors = ["Duncan <bonsairobo@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 2

[profile.release]
lto = true

[dependencies]
approx = "0.4"
serde = "1.0"
thread_local = "1.0"

[dependencies.bevy]
# version = "0.3"
# path = "../bevy"
git = "https://github.com/bevyengine/bevy"
# branch = "main"
rev = "7a511394"

[dependencies.building-blocks]
git = "https://github.com/bonsairobo/building-blocks"
# branch = "main"
rev = "802af901"
# path = "../building-blocks"
# version = "0.2.1"
default-features = false
features = ["glam", "lz4", "mesh", "nalgebra", "ncollide", "search"]
