[package]
name = "building-blocks-editor"
version = "0.1.0"
authors = ["Duncan <bonsairobo@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 2

[profile.release]
lto = true

[dependencies]
approx = "0.4"
ron = "0.6"
serde = "1.0"
thread_local = "1.0"
bevy-orbit-controls = { git = "https://github.com/rezural/bevy-orbit-controls.git", rev = "4196a4bf" }

[dependencies.bevy]
version = "0.5"
# path = "../bevy"
# git = "https://github.com/bevyengine/bevy"
# branch = "main"
# rev = "7a511394"
features = ["bevy_wgpu", "bevy_winit", "render", "png", "x11"]

[dependencies.building-blocks]
git = "https://github.com/bonsairobo/building-blocks"
# branch = "main"
rev = "15dcfe6"
# path = "../building-blocks"
# version = "0.2.1"
default-features = false
features = ["glam", "lz4", "mesh", "nalgebra", "ncollide", "search"]
